# Art-Gallery-Problem--manim

./: .gitignore  .gitmodules  Bufer.txt  README-ru.md  README.md  SCRIPT_Acceleration_of_free_fall.py  SCRIPT_Art_gallery_theorem.py  SCRIPT_Art_gallery_theorem_copy.py  animation.py  backdrop_animations.py  copyrighting.py  interactive.py  moving_camera_slide.py  pyproject.toml  slides_animation.py  solution.py  subtheme_handler.py  tricolor_pseudocode.py
Visual_charts/Examples/Editable_gimp/: Plan_contrasted.xcf  Plan_contrasted_compressed.xcf
Visual_charts/Examples/Vectorized_plans/: OLD_Vectorizer_blendcode.py  OLD_meshes_data.json  meshes_data.json  vectorized.blend  vectorized.blend1  vectorized_applied.blend  vectorized_applied.blend1
agp_manim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agp_manim/agp_manim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agp_manim/animations/: slides_animation.py
agp_manim/animations/Visual_charts/Examples/Editable_gimp/: Plan.xcf  Plan_contrasted_nonotations.xcf
agp_manim/animations/Visual_charts/Triangulation/: triangulation_pseudocode.py
agp_manim/animations/Visual_charts/Tricoloring/: tricoloring_pseudocode.py
agp_manim/animations/backdrop_animations_submodule/: animations_composer.py  backdrop_animations.py
agp_manim/animations/backdrop_animations_submodule/src/: CircularSwirlField.py  RadialSinkField.py  SinField.py  SpiralInwardField.py
agp_manim/static/: static.py
agp_manim/static/TriangulationTheorem/: TriangulationTheorem.xcf
agp_manim/utils/: present_json.bat
documents/: COPY_Задача о картинной гелерее Триангуляция.docx  SiS_COPY_Задача о картинной гелерее Триангуляция.docx  План выступления.docx
media/Tex/: 050d60636a46bb5d.tex  0e3730adcd878d1b.tex  19f4d618198898a0.tex  3f06d4dc4f4599a7.tex  51dce8f12369e9ba.tex  5dae0fca92083e1a.tex  746950f089f13112.tex  9403be7648c0b6c3.tex  cad5bd83b0f83e9b.tex  ce09db12a8f6e591.tex  da0be027ed900859.tex  dd29ae9414420f3e.tex
slides/: Algorithm.json  ClosingRemarks.json  Examples.json  Greetings.json  ProblemDescription.json  TableOfContents.json  Triangulation.json  Tricoloring.json
slides/conv/: full.html  full_progress.html  full_touchscreen.html
(+19 files in other folders)
